--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
           <!--<li class="logo">-->
           <!--  <a id="logo-container" href="http://materializecss.com/" class="brand-logo"></a></li>-->
           <li class="bold"><%= link_to("Members", users_path, {class: "waves-effect waves-teal"}) %></li>
-          <li class="bold"><%= link_to("Record", new_body_management_path, {class: "waves-effect waves-teal"}) %></li>
+          <li class="bold"><%= link_to("Record", new_condition_path, {class: "waves-effect waves-teal"}) %></li>
           <li class="bold"><a href="about.html" class="waves-effect waves-teal">Graph</a></li>
           <li class="bold"><a href="getting-started.html" class="waves-effect waves-teal">Training Menu</a></li>
           <li class="bold"><a href="http://materializecss.com/mobile.html" class="waves-effect waves-teal">xxxx</a></li>
