--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
 
-<%= render(partial: 'form', locals: { user: @user, mode: 'new' }) %>
+<%= render(partial: 'form', locals: { user: @user,
+                                      mode: 'new' }) %>
 
