--- a/app/views/conditions/new.html.erb
+++ b/app/views/conditions/new.html.erb
@@ -1,15 +1,72 @@
 <h1>Conditions#new</h1>
 
 <div class="row">
-  <%= form_for(@condition, html: {class: "coll s12"}) do |f| %>
-    <%# val %>
-    <div class="row">
-      <div class="col s12">
-        <%= f.select :val, options_for_select(@select_weight) %>
-      </div>
-    </div>
+  
+  <ul class="collapsible popout" data-collapsible="accordion">
+    <% @user_dkinds.each_with_index do |dkind, idx| %>
+      <li>
+        <div class="collapsible-header">
+          <i class="material-icons">
+            <!--directions_run-->
+            <%= @acordion_icons[dkind.code] %>
+          </i>
+          <%= dkind.jp %>
+        </div>
+        <div class="collapsible-body container">
+          
+          <%= form_for(@condition, html: {class: "coll s12"}) do |f| %>
     
-    <%= button_tag('登録', {class: "btn waves-effect waves-light orange",
-                                         type: "submit"}) %>
+            <div class="row">
+              <div class="col s12 input-field">
+                <%= f.select :val, options_for_select(@select_menu[idx], selected: 10) %>
+                <label>
+                  <%= dkind.jp %>
+                </label>
+              </div>
+            </div>
+              
+            <%# dkind_idを渡す %>
+            <%= f.hidden_field :dkind_id, value: dkind.id %>      
+          
+            <%= button_tag('登録', {class: "btn waves-effect waves-light orange",
+                                             type: "submit"}) %>
+          <% end %>
+    
+        </div>
+      </li>
+    <% end %>
+  </ul>
+  
+  <%# 使用するデータタイプの編集 %>
+  <%= link_to(edit_user_dkind_path(current_user), {class: "btn-floating btn-small waves-effect waves-light red"}) do %>
+    <i class="material-icons">add</i>
   <% end %>
+
+  
+  <%# 記録したデータの編集 %>
+  <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+    <%= link_to(edit_condition_path(current_user), {class: "btn-floating btn-large waves-effect waves-light red"}) do %>
+      <i class="material-icons">mode_edit</i>
+    <% end %>
+  </div>
+  
+  
 </div>
+
+
+
+
+<script>
+  // ドロップダウン
+  $('select').material_select();
+  
+  
+</script>
+
+<style>
+/*アコーディオン内のpadding*/
+.collapsible-body {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+</style>
