--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,11 +7,40 @@
 <% @articles.all.each do |article| %>
   <%= article.title %>
   <%= article.description %>
+  <% if article.images %>
+    <div class="image">
+      <% article.images.each do |image| %>
+
+        
+        <div class="row">
+          <div class="col s12 m6">
+            <div class="card">
+              <div class="card-image">
+                <%# これ画像 %>
+                <%= image_tag(image.file.url) %>
+                <span class="card-title">Card Title</span>
+                  <%= link_to(new_article_path, {class: "btn-floating waves-effect waves-light green"}) do %>
+                    <i class="material-icons">mode_edit</i>
+                  <% end %>
+                  <%= link_to(new_article_path, {class: "btn-floating waves-effect waves-light red"}) do %>
+                    <i class="material-icons">clear</i>
+                  <% end %>
+              </div>
+              <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+      <% end %>
+    </div>
+  <% end %>
 <% end %>
 
 <%# 新規投稿ボタン %>
 <div class="fixed-action-btn">
-  <%= link_to(new_article_path, {class: "btn-floating btn-large waves-effect waves-light red"}) do %>
+  <%= link_to(new_article_path, {class: "btn-floating btn-large waves-effect waves-light dark-green"}) do %>
     <i class="material-icons">mode_edit</i>
   <% end %>
 </div>
