--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -15,13 +15,44 @@
     </div>
   </div>
   
-  <%= button_tag('投稿', {class: "btn waves-effect waves-light orange",
+  <%# 画像アップロード用 %>
+  <%= f.fields_for :images do |image| %>
+    <div class="file-field input-field">
+      <div class="btn">
+        <span>File</span>
+        <%= image.file_field :file %>
+      </div>
+      <div class="file-path-wrapper">
+        <input class="file-path validate" type="text">
+      </div>
+    </div>
+  <% end %>
+  <div style="text-align: right">
+    <%= button_tag('投稿', {class: "btn waves-effect waves-light orange",
                                    type: "submit"}) %>
-
+  </div>
 <% end %>
 
 <script>
   $(function (){
     $('#article_description').trigger('autoresize');
+  });
+  
+  // validationエラー箇所に赤色にする
+  // validationエラー時に付与されるfield_with_errorsのdivを削除する
+  // これしないとmaterializeがうまく動かない %>
+  $(function() {
+    if($('div').hasClass('field_with_errors')){
+      <%# typeごとに色付け %>
+      $('.field_with_errors').children('.input-field input[type=text]').css("border-bottom", "1px solid #F00");
+      $('.field_with_errors').children('.input-field input[type=text]').css("box-shadow", "0 1px 0 0 #F00");
+      $('.field_with_errors').children('.input-field textarea').css("border-bottom", "1px solid #F00");
+      $('.field_with_errors').children('.input-field textarea').css("box-shadow", "0 1px 0 0 #F00");
+      $('.field_with_errors').children('label').css("color", "#F00");
+      $('.field_with_errors').next('label').css("color", "#F00");
+      $('.error').css("color", "#F00");
+      <%# error発生時、railsが以下のclassを付与するので消す %>
+      $('.field_with_errors').parent().children("div").contents().unwrap();
+    }
   });
 </script>
